--- a/html/Irssi.html
+++ b/html/Irssi.html
@@ -1,18 +1,17 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
-<head>
-<link rel="Stylesheet" type="text/css" href="style.css">
-<title>Irssi Notes - Covi</title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-</head>
+    <head>
+        <link rel="Stylesheet" type="text/css" href="style.css" />
+        <title>Irssi Notes - Covi</title>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    </head>
 <body>
-
 <h1 id="toc_1">Irssi Notes</h1>
 
 <ul>
 <li>
 <code>/set autolog on</code>. Automatically save logs.
-
+</li>
 </ul>
 <hr />
 <p>
@@ -21,4 +20,17 @@ Last Modified: Sat 25 Feb 2012 12:36:49 PM CST
 </p>
 
 </body>
+
+<script src="http://geotakucovi.com/MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+  MathJax.Hub.Config({
+    extensions: ["tex2jax.js"],
+    jax: ["input/TeX","output/HTML-CSS"],
+    tex2jax: {
+        inlineMath: [["$","$"],["\\(","\\)"]],
+        displayMath: [ ['$$','$$'], ['\[','\]'] ],
+        processEscapes: true
+    }
+  });
+</script>
+
 </html>
