--- a/html/Git.html
+++ b/html/Git.html
@@ -1,9 +1,10 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
-<head>
-<link rel="Stylesheet" type="text/css" href="style.css" />
-<title>Git - Covi</title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-</head>
+    <head>
+        <link rel="Stylesheet" type="text/css" href="style.css" />
+        <title>Git - Covi</title>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    </head>
 <body>
 <p>
 I automatically push my entire wiki to <a href="https://github.com/concretevitamin/personal-wiki">https://github.com/concretevitamin/personal-wiki</a>. Check out how <a href="About.html">Here</a>.
@@ -48,4 +49,17 @@ Last Modified: October 03, 2011 15:16:31
 </p>
 
 </body>
+
+<script src="http://geotakucovi.com/MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+  MathJax.Hub.Config({
+    extensions: ["tex2jax.js"],
+    jax: ["input/TeX","output/HTML-CSS"],
+    tex2jax: {
+        inlineMath: [["$","$"],["\\(","\\)"]],
+        displayMath: [ ['$$','$$'], ['\[','\]'] ],
+        processEscapes: true
+    }
+  });
+</script>
+
 </html>
