--- a/html/Linux Notes.html
+++ b/html/Linux Notes.html
@@ -1,12 +1,11 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
-<head>
-<link rel="Stylesheet" type="text/css" href="style.css">
-<title>Linux Notes - Covi</title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-</head>
+    <head>
+        <link rel="Stylesheet" type="text/css" href="style.css" />
+        <title>Linux Notes - Covi</title>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    </head>
 <body>
-
 <h1 id="toc_1">Linux Notes</h1>
 
 <h2 id="toc_1.1">TO-DO SPACE</h2>
@@ -18,10 +17,10 @@ screen, tmux, conqueterm vim plugin, awesome, xmonad
 <ul>
 <li>
 haskell-platform is not packaged for Ubuntu 10.04LTS. Use this outdated ppa: <a href="https://launchpad.net/~justinbogner/+archive/haskell-platform">https://launchpad.net/~justinbogner/+archive/haskell-platform</a>
-
+</li>
 <li>
 In Ubuntu, software sources are maintained in <code>/etc/apt/sources.list</code>. To avoid key/signatures problems, use the command <code>sudo add-apt-repository</code>. Also <code>sudo apt-get update</code>.
-
+</li>
 </ul>
 
 <h2 id="toc_1.3">(General) Notes</h2>
@@ -34,7 +33,7 @@ In Ubuntu, software sources are maintained in <code>/etc/apt/sources.list</code>
 <ul>
 <li>
 <a href="run_command.html">Automatically run commands after Linux starts</a>.
-
+</li>
 </ul>
 
 <h2 id="toc_1.5">Commands</h2>
@@ -89,4 +88,17 @@ Last Modified: Sun 26 Feb 2012 02:37:49 PM CST
 </p>
 
 </body>
+
+<script src="http://geotakucovi.com/MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+  MathJax.Hub.Config({
+    extensions: ["tex2jax.js"],
+    jax: ["input/TeX","output/HTML-CSS"],
+    tex2jax: {
+        inlineMath: [["$","$"],["\\(","\\)"]],
+        displayMath: [ ['$$','$$'], ['\[','\]'] ],
+        processEscapes: true
+    }
+  });
+</script>
+
 </html>
