--- a/html/MathJax with Vimwiki.html
+++ b/html/MathJax with Vimwiki.html
@@ -1,9 +1,10 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
-<head>
-<link rel="Stylesheet" type="text/css" href="style.css" />
-<title>MathJax with Vimwiki - Covi</title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-</head>
+    <head>
+        <link rel="Stylesheet" type="text/css" href="style.css" />
+        <title>MathJax with Vimwiki - Covi</title>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    </head>
 <body>
 <h1 id="toc_1">Mathjax with Vimwiki</h1>
 <ul>
@@ -64,7 +65,8 @@ Last Modified: October 21, 2011 23:07:24
     jax: ["input/TeX","output/HTML-CSS"],
     tex2jax: {
         inlineMath: [["$","$"],["\\(","\\)"]],
-        displayMath: [ ['$$','$$'], ['\[','\]'] ]
+        displayMath: [ ['$$','$$'], ['\[','\]'] ],
+        processEscapes: true
     }
   });
 </script>
