--- a/html/Modeling.html
+++ b/html/Modeling.html
@@ -1,9 +1,10 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
-<head>
-<link rel="Stylesheet" type="text/css" href="style.css" />
-<title>Modeling - Covi</title>
-<meta http-equiv="Content-Type" content="text/html; charset=cp936" />
-</head>
+    <head>
+        <link rel="Stylesheet" type="text/css" href="style.css" />
+        <title>Modeling - Covi</title>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    </head>
 <body>
 <p>
 In Nov 2011, I participate in <a href="http://www.comap.com/highschool/contests/himcm/">HiMCM 2011</a>, solving Problem A. The judge results will come out in Feb 2012.
