--- a/html/Sol To DP Book.html
+++ b/html/Sol To DP Book.html
@@ -1,9 +1,10 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
-<head>
-<link rel="Stylesheet" type="text/css" href="style.css" />
-<title>Solutions to Problems in The Art and Theory of Dynamic Programming - Covi</title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-</head>
+    <head>
+        <link rel="Stylesheet" type="text/css" href="style.css" />
+        <title>Solutions to Problems in The Art and Theory of Dynamic Programming - Covi</title>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    </head>
 <body>
 <h1 id="toc_1">The Book</h1>
 <p>
