add today's tinkering

--- a/html/log.html
+++ b/html/log.html
@@ -8,18 +8,18 @@
 <body>
 <h1 id="toc_1">Site Maintenance Log</h1>
 <p>
-(<em>NOTE</em>: I started this log on Feb 5, 2012. The <a href="https://github.com/concretevitamin/personal-wiki/commits/master">commit history</a> at Github contains more complete log.)
+<em>NOTE</em>: I started this log on Feb 5, 2012. The <a href="https://github.com/concretevitamin/personal-wiki/commits/master">commit history</a> at Github contains <em>more</em> complete logs.
 </p>
-
-<p>
-Feb 5, 2012. Edited CSS: modify the appearance of hyperlinks.
-Feb 6, 2012. Edited CSS: modify the layout (margins) of the pages.
-</p>
+<blockquote>
+Feb 5, 2012. Edited CSS: modify the appearance of hyperlinks.<br>
+Feb 6, 2012. Edited CSS: modify the layout (margins) of the pages.<br>
+Mar 10, 2012. Fix auto centering under IE, by adding a doctype declaration in every generated html files.
+</blockquote>
 
 <hr />
 <p>
 Created Date: February 05, 2012 20:27:52<br />
-Last Modified: February 06, 2012 19:10:41 
+Last Modified: March 10, 2012 11:08:02 
 </p>
 
 </body>
