blackquoted the two quotes; deleted avatar

--- a/html/index.html
+++ b/html/index.html
@@ -7,26 +7,12 @@
     </head>
 <body>
 <h1 id="toc_1">Welcome to Covi's Personal Knowledge Base Wiki!</h1>
-
-<p>
-<img src="http://geotakucovi.com/avatar.jpg" alt="Avatar" />
-</p>
-
-<p>
+<blockquote>
 ``The greater danger for most of us lies not in setting our aim too high and falling short; but in setting our aim too low, and achieving our mark.'' -- Michelangelo Buonarroti
-</p>
-
-<p>
-``To strive, to seek, to find, and not to yield.'' -- <em>Ulysses</em>
-</p>
-
-<p>
-<strong>To all frustrated, sleep-deprived, stressed out high school seniors deperately preparing your applications: LISTEN TO CANNONBALL ADDERLEY's MERCY, MERCY, MERCY!</strong>
-</p>
-
-<p>
-<code>----------------------------</code>
-</p>
+</blockquote>
+<blockquote>
+``To strive, to seek, to find, and not to yield.'' -- Ulysses
+</blockquote>
 
 <p>
 Hi! My name is <strong>Zongheng Yang</strong>, a high school senior in <a href="http://www.shenzhong.net">Shenzhen Middle School</a>, Shenzhen, China (<a href="http://maps.google.com/maps?q=shenzhen,+china&amp;hl=en&amp;client=firefox-a&amp;gl=us&amp;z=10&amp;vpsrc=0">Google Maps</a>). 
@@ -175,7 +161,7 @@ Computer Science (Github (codes, projects, work): <a href="https://github.com/co
 <hr />
 <p>
 Created Date: Jan 31, 2011.<br />
-Last Modified: February 16, 2012 09:36:21 
+Last Modified: March 10, 2012 11:17:37 
 </p>
 
 </body>
