--- a/html/Git.html
+++ b/html/Git.html
@@ -6,8 +6,10 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     </head>
 <body>
+<h1 id="toc_1">Git</h1>
+
 <p>
-I automatically push my entire wiki to <a href="https://github.com/concretevitamin/personal-wiki">https://github.com/concretevitamin/personal-wiki</a>. Check out how <a href="About.html">Here</a>.
+I live push my entire wiki from my local computer to this website and <a href="https://github.com/concretevitamin/personal-wiki">https://github.com/concretevitamin/personal-wiki</a>. Check out how <a href="About.html">Here</a>.
 </p>
 
 <p>
@@ -29,7 +31,7 @@ Dealing with “non-fast-forward” errors: check out the "Dealing with “non-f
 </li>
 </ul>
 
-<h2 id="toc_0.1">Frequently Used Commands</h2>
+<h2 id="toc_1.1">Frequently Used Commands</h2>
 <ul>
 <li>
 git show --pretty="format:" --name-only % alias lf (last files)
@@ -45,7 +47,7 @@ git comm 'MSG' --amend
 </ul>
 <hr />
 <p>
-Last Modified: October 03, 2011 15:16:31 
+Last Modified: March 17, 2012 20:48:59 
 </p>
 
 </body>
