--- a/html/Linux Notes.html
+++ b/html/Linux Notes.html
@@ -1,11 +1,12 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
-    <head>
-        <link rel="Stylesheet" type="text/css" href="style.css" />
-        <title>Linux Notes - Covi</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    </head>
+<head>
+<link rel="Stylesheet" type="text/css" href="style.css">
+<title>Linux Notes - Covi</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+</head>
 <body>
+
 <h1 id="toc_1">Linux Notes</h1>
 
 <h2 id="toc_1.1">TO-DO SPACE</h2>
@@ -17,23 +18,27 @@ screen, tmux, conqueterm vim plugin, awesome, xmonad
 <ul>
 <li>
 haskell-platform is not packaged for Ubuntu 10.04LTS. Use this outdated ppa: <a href="https://launchpad.net/~justinbogner/+archive/haskell-platform">https://launchpad.net/~justinbogner/+archive/haskell-platform</a>
-</li>
+
 <li>
 In Ubuntu, software sources are maintained in <code>/etc/apt/sources.list</code>. To avoid key/signatures problems, use the command <code>sudo add-apt-repository</code>. Also <code>sudo apt-get update</code>.
-</li>
+
 </ul>
 
-<h2 id="toc_1.3">(General) Notes</h2>
-<p>
-<code>#</code> Auto-completion: Check out <code>man gnome-</code> and press <code>&lt;Tab&gt;</code>.<br />
-<code>#</code> Use S+ page up/down to scroll up and down in the Gnome Terminal.<br />
-</p>
+<h2 id="toc_1.3">General Notes</h2>
+<ul>
+<li>
+When Page Up/Down don't work, also press Shift<br />
+
+<li>
+If you want to display anything when a terminal is called up (greetings, todo's, date, etc.), put the echo statements into the <code>.bashrc</code> file.
+
+</ul>
 
 <h2 id="toc_1.4">Tricks/Tasks</h2>
 <ul>
 <li>
 <a href="run_command.html">Automatically run commands after Linux starts</a>.
-</li>
+
 </ul>
 
 <h2 id="toc_1.5">Commands</h2>
@@ -41,10 +46,6 @@ In Ubuntu, software sources are maintained in <code>/etc/apt/sources.list</code>
 <strong>ls</strong><br />
 <code>ls -a</code> # <code>.</code> before files/directories names means they are hidden files/directories.<br />
 <code>ls -l</code> # to show the file types.<br />
-</p>
-
-<p>
-<code>cat</code> # concatenate files and print on standard output.<br />
 <code>df</code> (<em>disk full</em> or <em>disk free</em>) # display information about the partitions and their mount points<br />
 <code>which</code> # to see where a command locates<br />
 <code>pwd</code> # print name of current/working directory<br />
@@ -84,21 +85,8 @@ In Ubuntu, software sources are maintained in <code>/etc/apt/sources.list</code>
 <hr />
 <p>
 Created Date: Feb 17, 2011 23:00:39<br />
-Last Modified: Sun 26 Feb 2012 02:37:49 PM CST
+Last Modified: Sat 21 Apr 2012 10:18:55 PM CST
 </p>
 
 </body>
-
-<script src="http://geotakucovi.com/MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
-  MathJax.Hub.Config({
-    extensions: ["tex2jax.js"],
-    jax: ["input/TeX","output/HTML-CSS"],
-    tex2jax: {
-        inlineMath: [["$","$"],["\\(","\\)"]],
-        displayMath: [ ['$$','$$'], ['\[','\]'] ],
-        processEscapes: true
-    }
-  });
-</script>
-
 </html>
