--- a/html/Movies.html
+++ b/html/Movies.html
@@ -1,220 +1,211 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
-    <head>
-        <link rel="Stylesheet" type="text/css" href="style.css" />
-        <title>Movies I've Watched</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    </head>
+<head>
+<link rel="Stylesheet" type="text/css" href="style.css">
+<title>Movies I've Watched</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+</head>
 <body>
+
 <h1 id="toc_1">Movies I've Watched</h1>
 
 <h2 id="toc_1.1">Feb, 2011</h2>
 <ul>
 <li>
 <em>The King's Speech</em>, 2010.
-</li>
+
 <li>
 <em>Black Swan</em>, 2010.
-</li>
+
 </ul>
 
 <h2 id="toc_1.2">Mar, 2011</h2>
 <ul>
 <li>
 <em>127 Hours</em>, 2010.
-</li>
+
 <li>
 <em>Love Actually</em>, 2003.
-</li>
+
 <li>
 <em>The Fighter</em>, 2010.
-</li>
+
 <li>
 <em>There Will be Blood</em>, 2007.
-</li>
+
 </ul>
 
 <h2 id="toc_1.3">Apr, 2011</h2>
 <ul>
 <li>
 <em>Jarhead</em>, 2005.
-</li>
+
 <li>
 <em>12</em>, 2007.
-</li>
+
 </ul>
 
 <h2 id="toc_1.4">May, 2011</h2>
 <ul>
 <li>
 <em>Fast Five</em>, 2011.
-</li>
+
 <li>
 <em>Pirates of the Caribbean: On Stranger Tides</em>, 2011.
-</li>
+
 </ul>
 
 <h2 id="toc_1.5">June, 2011</h2>
 <ul>
 <li>
 <em>True Grit</em>, 2010.
-</li>
+
 <li>
 <em>Kung Fu Panda 2</em>, 2011.
-</li>
+
 </ul>
 
 <h2 id="toc_1.6">July, 2011</h2>
 <ul>
 <li>
 <em>Transformers: Dark of the Moon</em>, 2011.
-</li>
+
 <li>
 <em>Source Code</em>, 2011.
-</li>
+
 <li>
 <em>Unthinkable</em>, 2010.
-</li>
+
 <li>
 <em>Public Enemies</em>, 2009.
-</li>
+
 <li>
 <em>Harry Potter and Deathly Hallows: Part 2</em>, 2011.
-</li>
+
 <li>
 <em>Salt</em>, 2010.
-</li>
+
 <li>
 <em>Infernal Affairs</em>, 2002.
-</li>
+
 </ul>
 
 <h2 id="toc_1.7">August, 2011</h2>
 <ul>
 <li>
 <em>Rise of the Planet of the Apes</em>, 2011.
-</li>
+
 <li>
 <em>Tree of Life</em>, 2011. (This movie remarkably captures and transmits the poignant feeling of losing loved ones!)
-</li>
+
 <li>
 <em>Captain America: The First Avenger</em>, 2011.
-</li>
+
 <li>
 <em>Limitless</em>, 2011.
-</li>
+
 <li>
 <em>Infernal Affairs II</em>, 2003.
-</li>
+
 <li>
 <em>Overheard 2</em>, 2011.
-</li>
+
 </ul>
 
 <h2 id="toc_1.8">Oct, 2011</h2>
 <ul>
 <li>
 <em>The Great Debaters</em>, 2007.
-</li>
+
 </ul>
 
 <h2 id="toc_1.9">Nov, 2011</h2>
 <ul>
 <li>
 <em>American Gangster</em>, 2007.
-</li>
+
 <li>
 <em>Harry Potter and the Deathly Hallows Part 2</em>, 2011.
-</li>
+
 <li>
 <em>Harry Potter and the Deathly Hallows Part 1</em>, 2010.
-</li>
+
 <li>
 <em>Harry Potter and the Half Blood Prince</em>, 2009.
-</li>
+
 <li>
 <em>The Departed</em>, 2006. (U.S. version of <em>Internal Affairs</em>)
-</li>
+
 </ul>
 
 <h2 id="toc_1.10">Dec, 2011</h2>
 <ul>
 <li>
 <em>The Debt</em>, 2010.
-</li>
+
 <li>
 <em>The Machinist</em>, 2004.
-</li>
+
 </ul>
 
 <h2 id="toc_1.11">Jan, 2012</h2>
 <ul>
 <li>
 <em>Mission Impossible: Ghost Protocol</em>, 2011.
-</li>
+
 <li>
 <em>Moneyball</em>, 2011.
-</li>
+
 <li>
 <em>K-PAX</em>, 2001. (AP En Lit final project!)
-</li>
+
 <li>
 <em>Tinker, Tailor, Soldier, Spy</em>, 2011.
-</li>
+
 <li>
 <em>Warrior</em>, 2011. (This one shares a similiar story structure, which is gradual revelation by subtle scenes or moments, with the <em>Tinker</em> movie. <em>Tinker</em> handles better the subtlety, and <em>Warrior</em> arouses more emotions. Both are nice watch!)
-</li>
+
 </ul>
 
 <h2 id="toc_1.12">Feb, 2012</h2>
 <ul>
 <li>
 <em>Another Year</em>, 2011. Life is a finite loop of aging, maturing, losing, and discovering.
-</li>
+
 <li>
 <em>J. Edgar</em>, 2011.
-</li>
+
 <li>
 <em>Life Without Principle (夺命金)</em>, 2011.
-</li>
+
 <li>
 <em>West Side Story</em>, 1961.
-</li>
+
 </ul>
 
 <h2 id="toc_1.13">Mar, 2012</h2>
 <ul>
 <li>
 <em>The Girl with the Dragon Tattoo</em>, 2011.
-</li>
+
 <li>
 <em>Gangs of New York</em>, 2002.
-</li>
+
 <li>
 <em>Titanic 3D</em>, 1997.
-</li>
+
 <li>
 <em>Carnage</em>, 2011.
-</li>
+
+<li>
+<em>The Company</em> (mini series), 2007.
+
 </ul>
 <hr />
 <p>
 Created Date: Feb 09, 2011 0:13:47<br />
-Last Modified: April 17, 2012 20:30:21 
+Last Modified: Mon 23 Apr 2012 10:40:07 PM CST
 </p>
 
 </body>
-
-<script src="http://geotakucovi.com/MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
-  MathJax.Hub.Config({
-    extensions: ["tex2jax.js"],
-    jax: ["input/TeX","output/HTML-CSS"],
-    tex2jax: {
-        inlineMath: [["$","$"],["\\(","\\)"]],
-        displayMath: [ ['$$','$$'], ['\[','\]'] ],
-        processEscapes: true
-    }
-  });
-</script>
-
 </html>
