--- a/html/index.html
+++ b/html/index.html
@@ -63,10 +63,13 @@ Computer Science (Github (codes, projects, work): <a href="https://github.com/co
 </li>
 <ul>
 <li>
+Notes: <a href="Machine Learning Notes.html">Machine Learning Notes</a>. <a href="NOIP Notes.html">Some basic notes</a>. <a href="Python Notes.html">Python Notes</a>. <a href="AP Computer Science.html">AP Computer Science</a>. <a href="Graph Theory and Algorithms.html">Graph Theory and Algorithms</a>.
+</li>
+<li>
 <a href="gcc.html">Notes on gcc/g++</a>. Options/Compiling/Make.
 </li>
 <li>
-<a href="ProjectEuler.html">My Project Euler Codes</a>.
+<a href="ProjectEuler.html">My Project Euler Codes</a>. <a href="snippets.html">Collection of Code Snippets</a>.
 </li>
 <li>
 <a href="NOIP 2011 Prep.html">My Preparation for NOIP 2011</a>.
@@ -75,22 +78,10 @@ Computer Science (Github (codes, projects, work): <a href="https://github.com/co
 <a href="Sol To DP Book.html">Solutions to Problems in The Art and Theory of Dynamic Programming</a>. 
 </li>
 <li>
-<a href="NOIP Notes.html">Some basic notes</a>. 
-</li>
-<li>
-<a href="Graph Theory and Algorithms.html">Graph Theory and Algorithms</a>.
-</li>
-<li>
-<a href="AP Computer Science.html">AP Computer Science</a>; In Fall 2011 I will be a TA for the AP Computer Science Class. Here contains notes and resources for my fellow classmates.
-</li>
-<li>
-<a href="Python Notes.html">Python Notes</a>. I find learning Python a great break from college applications.
-</li>
-<li>
 <a href="wordcount.html">wordcount.py, with interesting results!</a> wordcount.py is a small python program I wrote for fun. Check out the results!
 </li>
 <li>
-<a href="snippets.html">Collection of Code Snippets</a>. Good stuff.
+
 </li>
 </ul>
 <li>
@@ -161,7 +152,7 @@ Computer Science (Github (codes, projects, work): <a href="https://github.com/co
 <hr />
 <p>
 Created Date: Jan 31, 2011.<br />
-Last Modified: March 10, 2012 11:17:37 
+Last Modified: May 23, 2012 23:26:14 
 </p>
 
 </body>
