--- a/html/index.html
+++ b/html/index.html
@@ -63,10 +63,7 @@ Computer Science (Github (codes, projects, work): <a href="https://github.com/co
 </li>
 <ul>
 <li>
-Notes: <a href="Machine Learning Notes.html">Machine Learning Notes</a>. <a href="NOIP Notes.html">Some basic notes</a>. <a href="Python Notes.html">Python Notes</a>. <a href="AP Computer Science.html">AP Computer Science</a>. <a href="Graph Theory and Algorithms.html">Graph Theory and Algorithms</a>.
-</li>
-<li>
-<a href="gcc.html">Notes on gcc/g++</a>. Options/Compiling/Make.
+Notes: <a href="Machine Learning Notes.html">Machine Learning Notes</a>.  <a href="NOIP Notes.html">Some basic notes</a>.  <a href="Python Notes.html">Python Notes</a>.  <a href="AP Computer Science.html">AP Computer Science</a>.  <a href="Graph Theory and Algorithms.html">Graph Theory and Algorithms</a>.  <a href="gcc.html">Notes on gcc/g++</a>. 
 </li>
 <li>
 <a href="ProjectEuler.html">My Project Euler Codes</a>. <a href="snippets.html">Collection of Code Snippets</a>.
@@ -79,9 +76,6 @@ Notes: <a href="Machine Learning Notes.html">Machine Learning Notes</a>. <a href
 </li>
 <li>
 <a href="wordcount.html">wordcount.py, with interesting results!</a> wordcount.py is a small python program I wrote for fun. Check out the results!
-</li>
-<li>
-
 </li>
 </ul>
 <li>
@@ -152,7 +146,7 @@ Notes: <a href="Machine Learning Notes.html">Machine Learning Notes</a>. <a href
 <hr />
 <p>
 Created Date: Jan 31, 2011.<br />
-Last Modified: May 23, 2012 23:26:14 
+Last Modified: May 23, 2012 23:28:42 
 </p>
 
 </body>
