--- a/html/Machine Learning Notes.html
+++ b/html/Machine Learning Notes.html
@@ -29,7 +29,7 @@ Regularization (for linear regression and logistic regression). (<a href="http:/
 <hr />
 <p>
 Creation Date: May 23, 2012 23:23:51<br />
-Last Modified: May 23, 2012 23:30:54 
+Last Modified: Fri 08 Jun 2012 12:50:45 PM CST
 </p>
 
 </body>
