--- a/html/index.html
+++ b/html/index.html
@@ -63,7 +63,10 @@ Computer Science (Github (codes, projects, work): <a href="https://github.com/co
 </li>
 <ul>
 <li>
-Notes: <a href="Machine Learning Notes.html">Machine Learning Notes</a>.  <a href="NOIP Notes.html">Some basic notes</a>.  <a href="Python Notes.html">Python Notes</a>.  <a href="AP Computer Science.html">AP Computer Science</a>.  <a href="Graph Theory and Algorithms.html">Graph Theory and Algorithms</a>.  <a href="gcc.html">Notes on gcc/g++</a>. 
+<a href="Machine Learning Notes.html">Machine Learning (ML)</a>. <a href="NLP Notes.html">Natural Language Processing (NLP)</a>.
+</li>
+<li>
+Notes: .  <a href="NOIP Notes.html">Some basic notes</a>.  <a href="Python Notes.html">Python Notes</a>.  <a href="AP Computer Science.html">AP Computer Science</a>.  <a href="Graph Theory and Algorithms.html">Graph Theory and Algorithms</a>.  <a href="gcc.html">Notes on gcc/g++</a>. 
 </li>
 <li>
 <a href="ProjectEuler.html">My Project Euler Codes</a>. <a href="snippets.html">Collection of Code Snippets</a>.
@@ -146,7 +149,7 @@ Notes: <a href="Machine Learning Notes.html">Machine Learning Notes</a>.  <a hre
 <hr />
 <p>
 Created Date: Jan 31, 2011.<br />
-Last Modified: May 23, 2012 23:28:42 
+Last Modified: June 10, 2012 00:02:17 
 </p>
 
 </body>
