--- a/html/Movies.html
+++ b/html/Movies.html
@@ -232,11 +232,14 @@
 <li>
 <em>Margin Call</em>, 2011.
 </li>
+<li>
+<em>A Beautiful Mind</em>, 2001.
+</li>
 </ul>
 <hr />
 <p>
 Creation Date: Feb 09, 2011 0:13:47<br />
-Last Modified: June 12, 2012 00:28:13 
+Last Modified: June 20, 2012 22:47:45 
 </p>
 
 </body>
