vim encoding trick

--- a/html/Movies.html
+++ b/html/Movies.html
@@ -236,10 +236,17 @@
 <em>A Beautiful Mind</em>, 2001.
 </li>
 </ul>
+
+<h2 id="toc_1.17">July, 2012</h2>
+<ul>
+<li>
+<em>桃姐 (A Simple Life)</em>, 2011.
+</li>
+</ul>
 <hr />
 <p>
 Creation Date: Feb 09, 2011 0:13:47<br />
-Last Modified: June 20, 2012 22:47:45 
+Last Modified: July 01, 2012 22:05:27 
 </p>
 
 </body>
